Fix sizing issue with images on mobile

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -29,6 +29,17 @@ img {
   margin-right: auto;
 }
 
+
+
+.project-images img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  white-space: nowrap;
+  max-width: 35%;
+  height: auto;
+}
+
 h1 {
   text-align: center;
   padding-bottom: 0px;
@@ -166,5 +177,23 @@ nav li{
   .container{
     margin: auto;
     max-width: 800px;
+  }
+
+  .project-images {
+    width: 650px;
+    height: auto;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  .project-images img {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    white-space: nowrap;
+    max-width: 45%;
+    height: auto;
   }
 }
